--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
  </head> 
   
  <body> 
-  <h1>DevOps</h1> 
-  <p>Bonjour</p> 
-  <ul> 
-   <li>item 1</li> 
-  </ul> 
- </body> 
-</html> 
+    <h1>DevOps</h1> 
+    <h2>Linux git ...</h2> 
+    <p>Bonjour tout le monde</p> 
+    <ul> 
+     <li>item 1</li> 
+  <li>item 2</li> 
+    </ul> 
+   </body> 
+  </html> 
